# CppLabs

./: README.md
Lab1/: CMakeLists.txt
Lab1/include/lib/: header.hpp
Lab1/src/: main.cpp
Lab1/test/: CMakeLists.txt  test.cpp
Lab2/: CMakeLists.txt  README.md
Lab2/include/lib/: octal.h  octalDigit.h
Lab2/src/: octal.cpp  octalDigit.cpp
Lab2/test/: CMakeLists.txt  OctalTestingClass.hpp  auxiliary.h  octalDigitTest.cpp  octalTest.cpp
Lab3/: CMakeLists.txt
Lab3/include/lib/: figure.h  flat_vector.h  quadrilateral.h  rectangle.h  rhombus.h  trapeze.h
Lab3/src/: figure.cpp  flat_vector.cpp  main.cpp  quadrilateral.cpp  rectangle.cpp  rhombus.cpp  trapeze.cpp
Lab3/test/: CMakeLists.txt  flat_vector_test.cpp  quad_test.cpp
Lab4/: CMakeLists.txt
Lab4/exec/: main.cpp
Lab4/headers/auxiliary/: auxiliary.hpp
Lab4/headers/figure/: rectangle.hpp  rhombus.hpp  trapeze.hpp
Lab4/headers/figure_array/: figure_array.hpp
Lab4/headers/flat_vector/: flat_vector.hpp
Lab4/headers/prim_array/: primitive_array.hpp
Lab4/test/: CMakeLists.txt  figure_array_test.cpp
Lab5/: CMakeLists.txt
Lab5/exec/: main.cpp
Lab5/headers/: linked_list.hpp
Lab5/test/: CMakeLists.txt  tests.cpp
Lab6/exec/: headersList.hpp  main.cpp  redactor.hpp
Lab6/headers/auxiliry/: point.hpp
Lab6/headers/creators/: creatorOfBear.hpp  creatorOfNPC.hpp  creatorOfOgre.hpp  creatorOfSquirrel.hpp
Lab6/headers/declarations/: container_traits.hpp  declarations.h  declarations.hpp
Lab6/headers/npc/: CreatorOfNPC.hpp  attackerNPC.hpp  bear.hpp  npc.hpp  ogre.hpp  squirrel.hpp
Lab6/headers/observer/: eventWriterObserver.hpp  killEventObserver.hpp  observer.hpp
Lab6/headers/observer/messageBroker/: consoleMessageBroker.hpp  fileMessageBroker.hpp
Lab6/headers/visitor/: attackVisitor.hpp  serializeVisitor.hpp  setAttackTargetVisitor.hpp  setAttackTargetsVisitor.hpp  visitor.hpp
Lab6/test/: CMakeLists.txt  tests.cpp
Lab7/: CMakeLists.txt
Lab7/exec/: gameModel.hpp  headersList.hpp  main.cpp
Lab7/headers/auxiliry/: point.hpp
Lab7/headers/creators/: creatorOfBear.hpp  creatorOfNPC.hpp  creatorOfOgre.hpp  creatorOfSquirrel.hpp
Lab7/headers/declarations/: container_traits.hpp  declarations.hpp
Lab7/headers/messageBroker/: consoleMessageBroker.hpp  fileMessageBroker.hpp  messageBroker.hpp
Lab7/headers/npc/: attackerNPC.hpp  bear.hpp  npc.hpp  ogre.hpp  squirrel.hpp
Lab7/headers/observer/: eventWriterObserver.hpp  killEventObserver.hpp  observer.hpp
Lab7/headers/visitor/: attackVisitor.hpp  serializeVisitor.hpp  setAttackTargetVisitor.hpp  setAttackTargetsVisitor.hpp  visitor.hpp
Lab7/test/: CMakeLists.txt  tests.cpp
